--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-
-streamlit
-pandas
-numpy
-scikit-learn
-plotly
-joblib
-pinkle
+streamlit>=1.25.0
+pandas>=2.0
+numpy>=1.24
+matplotlib>=3.7
+seaborn>=0.12
+scikit-learn>=1.3
+plotly>=5.15
+joblib>=1.3
