--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit>=1.25.0
-pandas>=2.0
-numpy>=1.24
-matplotlib>=3.7
-seaborn>=0.12
-scikit-learn>=1.3
-plotly>=5.15
-joblib>=1.3
+streamlit
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
+plotly
+joblib
 pickle
